--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
       <button id="authorize-button" class="btn btn-primary hidden">Authorize</button>
 
-      <form id="filters" name="filters" method="get" class="form-horizontal">
+      <form id="filters" name="filters" method="get" class="form-horizontal hidden">
         <div class="form-group">
           <div class="col-md-4">
             <label class="control-label col-md-2" for="q">Match</label>
             <div class="col-md-10">
-              <input class="form-control" type="text" name="q" id="q" placeholder="filter match" value="" />&nbsp;
+              <input class="form-control" type="text" name="q" id="q" placeholder="filter match" value="" />
             </div>
           </div>
           <div class="col-md-4">
