resources' pathes updated

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Gmail API demo</title>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
-    <link rel="stylesheet" href="/js/plugins/vis/vis.min.css"/>
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="js/plugins/vis/vis.min.css"/>
 
     <style>
       iframe {
@@ -121,11 +121,11 @@
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-    <script src="/js/utils/h5utils.js"></script>
-    <script src="/js/utils/utils.js"></script>
+    <script src="js/utils/h5utils.js"></script>
+    <script src="js/utils/utils.js"></script>
 
     <!--<script src="/js/utils/diff_match_patch.js"></script>-->
-    <script src="/js/plugins/vis/vis.min.js"></script>
+    <script src="js/plugins/vis/vis.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
     <script src="bower_components/mustache/mustache.min.js"></script>
 
