resources' pathes updated

--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
     <!--<script src="/js/utils/diff_match_patch.js"></script>-->
     <script src="/js/plugins/vis/vis.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
-    <script src="bower_components/mustache/mustache.min.js"></script>
+    <script src="/bower_components/mustache/mustache.min.js"></script>
 
-    <script src="main.js"></script>
-    <script src="config.js"></script>
+    <script src="/main.js"></script>
+    <script src="/config.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
 
   </body>
