--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="js/plugins/vis/vis.min.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
 
     <style>
       iframe {
@@ -23,13 +24,15 @@
   </head>
   <body>
 
-    <div class="container">
+    <header class="header clearfix">
 
-      <h1>Gmail API demo</h1>
+      <div class="container">
 
-      <button id="authorize-button" class="btn btn-primary hidden">Authorize</button>
+        <h1>Gmail API demo</h1>
 
-      <form id="filters" name="filters" method="get" class="form-inline hidden">
+        <button id="authorize-button" class="btn btn-primary hidden">Authorize</button>
+
+        <form id="filters" name="filters" method="get" class="form-inline hidden">
 
           <div class="form-group">
             <label class="control-label" for="label">Label</label>
@@ -48,16 +51,20 @@
             <input class="form-control" type="number" name="maxResults" id="maxResults" placeholder="filter limit" value="1" min="1" />
           </div>
 
-        <div class="btn-group" role="group" aria-label="Basic example">
-          <button type="submit" class="btn btn-success">Read</button>
-          <input type="button" id="js_ui-parse" value="Parse" class="btn btn-info" />
-        </div>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <button type="submit" class="btn btn-success">Read</button>
+            <input type="button" id="js_ui-parse" value="Parse" class="btn btn-info" />
+          </div>
 
-      </form>
+        </form>
 
-      <p class="clearfix js_ui-message"></p>
+      </div>
 
-      <div id="visualization"></div>
+    </header>
+
+    <section class="container">
+
+      <div id="visualization" class="row"></div>
 
       <table class="table table-hover table-inbox hidden">
         <thead>
@@ -70,7 +77,7 @@
         <tbody></tbody>
       </table>
 
-    </div>
+    </section>
 
     <div class="modal fade" id="message-modal" tabindex="-1" role="dialog" aria-labelledby="myModalTitle">
       <div class="modal-dialog modal-lg">
@@ -107,9 +114,12 @@
 
     <script id="row-parsed-template" type="x-tmpl-mustache">
       <tr>
-        <td><img height="16" width="16" src='http://www.google.com/s2/favicons?domain={{shop_logo}}' />{{shop_name}}</td>
         <td>
-          <a href="#" class="message-link" data-toggle="modal" id="message-link-{{messageId}}">
+          <img class="ui__table__cellimage" height="16" width="16" src="http://www.google.com/s2/favicons?domain={{shop_logo}}" />
+          <span class="ui__table__celltitle">{{shop_name}}</span>
+        </td>
+        <td>
+          <a href="#" class="message-link" data-toggle="modal" id="message-link-{{messageId}}" data-orderid="{{order_id}}">
             <strong>{{order_id}}</strong><br />
             {{order_title}}
           </a>
