added plugins, inserted bootstrap alert box

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 
       <div id="visualization" class="row"></div>
 
+      <div class="alert alert-warning hidden" id="alert"></div>
+
       <table class="table table-hover table-inbox hidden">
         <thead>
           <tr>
@@ -134,17 +136,23 @@
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-    <script src="js/utils/h5utils.js"></script>
+    <!--<script src="js/utils/h5utils.js"></script>-->
     <script src="js/utils/utils.js"></script>
+
+    <!--<script src="js/utils/date.format.js"></script>-->
 
     <!--<script src="js/plugins/datejs/globalization/ru-RU.js"></script>-->
     <script src="js/plugins/datejs/date.js"></script>
+    <script src="js/plugins/momentjs/moment-with-locales.js"></script>
+
+    <script src="js/plugins/sugarjs/sugar-1.4.1-custom.min.js"></script>
+
     <script src="js/plugins/vis/vis.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
     <script src="bower_components/mustache/mustache.min.js"></script>
 
-    <script src="js/main.js"></script>
     <script src="config.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/regexes.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
 
   </body>
