search input layout fix

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                     <label class="control-label" for="q">What</label>
                     <input class="form-control" type="text" name="q" id="q" placeholder="filter match" value=""/>
                 </div>
+            </div>
+            <div class="container">
                 <div class="form-group">
                     <label class="control-label" for="label">Where</label>
                     <select class="form-control" id="label" name="label">
